--- a/Informatics/lab5/task1.tex
+++ b/Informatics/lab5/task1.tex
@@ -1,4 +1,24 @@
-{\begin{minipage}[b]{0.33333\textwidth}
+\documentclass{article}
+\usepackage[utf8]{inputenc}
+%Setting page size and margins
+\usepackage[a4paper, total={7in, 11in}]{geometry}
+\usepackage{multicol}
+%Setting stuff to use Russian
+\usepackage[T2A]{fontenc}
+\usepackage[russian]{babel}
+%Pictures
+\usepackage{graphicx}
+\graphicspath{ {./images/} }
+
+\pagenumbering{gobble}
+
+\title{lab5}
+\author{Дмитрий Суханкин}
+\date{December 2021}
+
+\begin{document}
+
+\begin{minipage}[b]{0.33333\textwidth}
 \raggedright
 {\large 30}
 \end{minipage}%
@@ -118,4 +138,6 @@ $\frac{1}{2}$, а а таких пар три, то ответ: $\frac{1}{3}$ \p
 в) Второй художник может действовать по следующему алгоритму:
 он раскрашивает грань, противоположную той, которую перед этим
 закрасил первый, причем красит ее противоположеным цветом.
-\end{multicols}}
+\end{multicols}
+
+\end{document}
